--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1" 
+  },
+  "engines": {
+    "node" : ">=14.20.1"
   }
 }
